--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.86.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
